initial css added

--- a/portfolio.html
+++ b/portfolio.html
@@ -3,12 +3,14 @@
 <head>
 	<title>Phil Clark</title>
 
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+</head>
+
 	<h1>Phil Clark</h1>
 
-	<a href="#">About</a>
-	<a href="#">Portfolio</a>
-	<a href="#">Contact</a>
-</head>
+	<a href="index.html">About</a>
+	<a href="portfolio.html">Portfolio</a>
+	<a href="contact.html">Contact</a>
 
 <body>
 
