--- a/contact.html
+++ b/contact.html
@@ -3,12 +3,14 @@
 <head>
 	<title>Phil Clark</title>
 
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+</head>
+
 	<h1>Phil Clark</h1>
 
-	<a href="#">About</a>
-	<a href="#">Portfolio</a>
-	<a href="#">Contact</a>
-</head>
+	<a href="index.html">About</a>
+	<a href="portfolio.html">Portfolio</a>
+	<a href="contact.html">Contact</a>
 
 <body>
 
@@ -33,7 +35,7 @@
 	</div>
 
 	<div>
-	
+
 		<h3>Connect with Me</h3>
 
 		<a href="https://github.com/clarkp08/"><img src="github.png"></a>
