--- a/index.html
+++ b/index.html
@@ -2,18 +2,17 @@
 <html lang="en">
 <head>
 	<title>Phil Clark</title>
+
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
-<body>
-
-<div>
 	<h1>Phil Clark</h1>
 
-	<a href="#">About</a>
-	<a href="#">Portfolio</a>
-	<a href="#">Contact</a>
-	
-</div>
+	<a href="index.html">About</a>
+	<a href="portfolio.html">Portfolio</a>
+	<a href="contact.html">Contact</a>
+
+<body>
 
 <div>
 
