--- a/contact.html
+++ b/contact.html
@@ -6,15 +6,17 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
-	<h1>Phil Clark</h1>
+	<h1>Phil Clark
 
 	<a href="index.html">About</a>
 	<a href="portfolio.html">Portfolio</a>
 	<a href="contact.html">Contact</a>
 
+	</h1>
+
 <body>
 
-	<div>
+	<div class="container">
 		<h2>Contact</h2>
 			
 			<form action="action_page.php">
@@ -36,6 +38,8 @@
 
 	<div>
 
+<section id="connect">	
+
 		<h3>Connect with Me</h3>
 
 		<a href="https://github.com/clarkp08/"><img src="github.png"></a>
@@ -44,8 +48,15 @@
 
 		<a href="https://stackoverflow.com/users/story/8127913"><img src="stack-overflow.png"></a>
 
+</section>		
+
 	</div>
 			
 
 </body>
+
+<footer>
+	&copy; Copyright 2017 Phil Clark
+</footer>
+
 </html>
