--- a/portfolio.html
+++ b/portfolio.html
@@ -6,15 +6,17 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
-	<h1>Phil Clark</h1>
+	<h1>Phil Clark
 
 	<a href="index.html">About</a>
 	<a href="portfolio.html">Portfolio</a>
 	<a href="contact.html">Contact</a>
 
+	</h1>
+
 <body>
 
-	<div>
+	<div class="container">
 		<h2>Portfolio</h2>
 			<a href="#"><img src="champ.png">Hangman</a>
 			<a href="#"><img src="golf.png">RPG Game</a>
@@ -23,7 +25,10 @@
 			<a href="#"><img src="paul.png">Rock Paper Scissors</a>
 	</div>
 
+
 	<div>
+
+<section id="connect">		
 		<h3>Connect with Me</h3>
 
 		<a href="https://github.com/clarkp08/"><img src="github.png"></a>
@@ -31,8 +36,14 @@
 		<a href="https://www.linkedin.com/in/phil-clark-4773623a/"><img src="linkedin.png"></a>
 
 		<a href="https://stackoverflow.com/users/story/8127913"><img src="stack-overflow.png"></a>
+</section>
+
 	</div>
 
 </body>
+
+<footer>
+	&copy; Copyright 2017 Phil Clark
+</footer>
 
 </html>
