--- a/index.html
+++ b/index.html
@@ -6,25 +6,33 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
-	<h1>Phil Clark</h1>
+	<h1>Phil Clark
 
 	<a href="index.html">About</a>
 	<a href="portfolio.html">Portfolio</a>
 	<a href="contact.html">Contact</a>
 
+	</h1>
+
 <body>
 
-<div>
+<div class="container">
+
+	<section id="about-me">
 
 	<h2>About Me</h2>
+
+		<img src="LinkedIn.jpg" alt=phil>
 
 		<p>Hello world, sup? I'm Phil, and this is my portfolio. If you would like to get to know me a little bit, feel free to continue reading (I won't be offended if you don't). I'm originally from Norfolk, Va. No, my family was not in the Navy - we just happen to call this particular military-based city home. I went to East Carolina University on a baseball scholarship; used to be a pretty average outfielder. I moved to Raleigh after graduation and worked in the insurance industry for 3 years whilst living in the City of Oaks, but I made the executive decision to make a career change into web development. So here we are.</p>
 
 		<p>I have loved Raleigh ever since I made the move here. You can typically find me at a local brewery, bar, or really any establishment with televisions and Wi-Fi for me to keep up with my fantasy football team. I also currently am working at a brand new local soccer shop (Premier Soccer), located in the Pleasant Valley shopping center. Stop by and buy stuff!</p>
 
-		<img src="LinkedIn.jpg" alt=phil>
+	</section>
 
 </div>
+
+	<section id="connect">
 
 	<h3>Connect with Me</h3>
 
@@ -34,16 +42,15 @@
 
 		<a href="https://stackoverflow.com/users/story/8127913"><img src="stack-overflow.png"></a>
 
-<div>
-	
+	</section>
 
-
-
-</div>
 
 </body>
 
 
+<footer>
+	&copy; Copyright 2017 Phil Clark
+</footer>
 
 
 
