--- a/portfolio.html
+++ b/portfolio.html
@@ -1,49 +1,74 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="en-us">
+
 <head>
-	<title>Phil Clark</title>
-
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <meta charset="UTF-8">
+  <title>Portfolio | Phil Clark</title>
+  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
-
-	<h1>Phil Clark
-
-	<a href="index.html">About</a>
-	<a href="portfolio.html">Portfolio</a>
-	<a href="contact.html">Contact</a>
-
-	</h1>
 
 <body>
 
-	<div class="container">
-		<h2>Portfolio</h2>
-			<a href="#"><img src="champ.png">Hangman</a>
-			<a href="#"><img src="golf.png">RPG Game</a>
-			<a href="#"><img src="nyc.png">Trivia Game</a>
-			<a href="#"><img src="yacht.png">Rutgers Info Widget</a>
-			<a href="#"><img src="paul.png">Rock Paper Scissors</a>
-	</div>
+  <header id="masthead">
+    <div class="container">
+      <a href="index.html" id="logo">Phil Clark</a>
+      <nav>
+        <a href="index.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </div>
+  </header>
 
+  <div id="main-container" class="container">
+    <section class="main-section">
+      <h1>Portfolio</h1>
 
-	<div>
+      <div class="work">
+        <img src="assets/images/technics-q-c-640-480-1.jpg" alt="hangman">
 
-<section id="connect">		
-		<h3>Connect with Me</h3>
+        <h3>Hangman</h3>
+      </div>
+      <div class="work">
+        <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
 
-		<a href="https://github.com/clarkp08/"><img src="github.png"></a>
+        <h3>RPG Game</h3>
+      </div>
+      <div class="work">
+        <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
 
-		<a href="https://www.linkedin.com/in/phil-clark-4773623a/"><img src="linkedin.png"></a>
+        <h3>Trivia Game</h3>
+      </div>
+      <div class="work">
+        <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
 
-		<a href="https://stackoverflow.com/users/story/8127913"><img src="stack-overflow.png"></a>
-</section>
+        <h3>Rutgers Info Widget</h3>
+      </div>
+      <div class="work">
+        <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
 
-	</div>
+        <h3>Rock Paper Scissors</h3>
+      </div>
 
+    </section>
+
+    <section class="sidebar">
+      <div id="connect">
+        <h2>Connect with Me</h2>
+
+        <a href="#"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
+        <a href="#"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
+        <a href="#"><img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" /></a>
+      </div>
+    </section>
+  </div>
+
+  <footer>
+    <div class="container">
+      Copyright &copy; 2017 Phil Clark
+    </div>
+  </footer>
 </body>
-
-<footer>
-	&copy; Copyright 2017 Phil Clark
-</footer>
 
 </html>
