--- a/contact.html
+++ b/contact.html
@@ -1,62 +1,66 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="en-us">
+
 <head>
-	<title>Phil Clark</title>
-
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <meta charset="UTF-8">
+  <title>Contact | Phil Clark</title>
+  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
-
-	<h1>Phil Clark
-
-	<a href="index.html">About</a>
-	<a href="portfolio.html">Portfolio</a>
-	<a href="contact.html">Contact</a>
-
-	</h1>
 
 <body>
 
-	<div class="container">
-		<h2>Contact</h2>
-			
-			<form action="action_page.php">
-				Name<br>
-					<input type="text" name="name">
-					<br>
+  <header id="masthead">
+    <div class="container">
+      <a href="index.html" id="logo">Phil Clark</a>
+      <nav>
+        <a href="index.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </div>
+  </header>
 
-				Email<br>
-					<input type="text" name="email">
-					<br>
+  <div id="main-container" class="container">
+    <section class="main-section">
+      <h1>Contact</h1>
 
-				Message<br>
-					<input type="text" name="message">
-					<br>
+      <form id="contact-form">
+        <ul>
+          <li>
+            <label for="name">Name</label>
+            <input type="text" id="name" name="name" placeholder="John Smith" required="required">
+          </li>
+          <li>
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" placeholder="example@gmail.com" required="required">
+          </li>
+          <li>
+            <label for="message">Message</label>
+            <textarea id="message" name="message" required="required"></textarea>
+          </li>
+        </ul>
+        <input type="submit">
+      </form>
 
-					<input type="submit" name="submit">
-			</form>
-	</div>
+    </section>
 
-	<div>
+    <section class="sidebar">
+      <div id="connect">
+        <h2>Connect with Me</h2>
 
-<section id="connect">	
+        <a href="#"><img src="assets/images/github.png" class="social" alt="GitHub" /></a>
+        <a href="#"><img src="assets/images/linkedin.png" class="social" alt="LinkedIn" /></a>
+        <a href="#"><img src="assets/images/stack-overflow.png" class="social" alt="Stack Overflow" /></a>
+      </div>
+    </section>
+  </div>
 
-		<h3>Connect with Me</h3>
-
-		<a href="https://github.com/clarkp08/"><img src="github.png"></a>
-
-		<a href="https://www.linkedin.com/in/phil-clark-4773623a/"><img src="linkedin.png"></a>
-
-		<a href="https://stackoverflow.com/users/story/8127913"><img src="stack-overflow.png"></a>
-
-</section>		
-
-	</div>
-			
-
+  <footer>
+    <div class="container">
+      Copyright &copy; 2017 Phil Clark
+    </div>
+  </footer>
 </body>
-
-<footer>
-	&copy; Copyright 2017 Phil Clark
-</footer>
 
 </html>
