--- a/index.html
+++ b/index.html
@@ -1,57 +1,54 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="en-us">
+
 <head>
-	<title>Phil Clark</title>
-
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <meta charset="UTF-8">
+  <title>About | Phil Clark</title>
+  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
-
-	<h1>Phil Clark
-
-	<a href="index.html">About</a>
-	<a href="portfolio.html">Portfolio</a>
-	<a href="contact.html">Contact</a>
-
-	</h1>
 
 <body>
 
-<div class="container">
+  <header id="masthead">
+    <div class="container">
+      <a href="index.html" id="logo">Phil Clark</a>
+      <nav>
+        <a href="index.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </div>
+  </header>
 
-	<section id="about-me">
+  <div id="main-container" class="container">
+    <section class="main-section">
+      <h1>About Me</h1>
 
-	<h2>About Me</h2>
+      <img src="assets/images/cat.jpg" class="auth-image" alt="Your Name">
 
-		<img src="LinkedIn.jpg" alt=phil>
+      <p>Hello world, sup? I'm Phil, and this is my portfolio. If you would like to get to know me a little bit, feel free to continue reading (I won't be offended if you don't). I'm originally from Norfolk, Va. No, my family was not in the Navy - we just happen to call this particular military-based city home. I went to East Carolina University on a baseball scholarship; used to be a pretty average outfielder. I moved to Raleigh after graduation and worked in the insurance industry for 3 years whilst living in the City of Oaks, but I made the executive decision to make a career change into web development. So here we are.</p>
 
-		<p>Hello world, sup? I'm Phil, and this is my portfolio. If you would like to get to know me a little bit, feel free to continue reading (I won't be offended if you don't). I'm originally from Norfolk, Va. No, my family was not in the Navy - we just happen to call this particular military-based city home. I went to East Carolina University on a baseball scholarship; used to be a pretty average outfielder. I moved to Raleigh after graduation and worked in the insurance industry for 3 years whilst living in the City of Oaks, but I made the executive decision to make a career change into web development. So here we are.</p>
+      <p>I have loved Raleigh ever since I made the move here. You can typically find me at a local brewery, bar, or really any establishment with televisions and Wi-Fi for me to keep up with my fantasy football team. I also currently am working at a brand new local soccer shop (Premier Soccer), located in the Pleasant Valley shopping center. Stop by and buy stuff!</p>
 
-		<p>I have loved Raleigh ever since I made the move here. You can typically find me at a local brewery, bar, or really any establishment with televisions and Wi-Fi for me to keep up with my fantasy football team. I also currently am working at a brand new local soccer shop (Premier Soccer), located in the Pleasant Valley shopping center. Stop by and buy stuff!</p>
+    </section>
 
-	</section>
+    <section class="sidebar">
+      <div id="connect">
+        <h2>Connect with Me</h2>
 
-</div>
+        <a href="#"><img src="assets/images/github.png" class="social" alt="GitHub" /></a>
+        <a href="#"><img src="assets/images/linkedin.png" class="social" alt="LinkedIn" /></a>
+        <a href="#"><img src="assets/images/stack-overflow.png" class="social" alt="Stack Overflow" /></a>
+      </div>
+    </section>
+  </div>
 
-	<section id="connect">
-
-	<h3>Connect with Me</h3>
-
-		<a href="https://github.com/clarkp08/"><img src="github.png"></a>
-
-		<a href="https://www.linkedin.com/in/phil-clark-4773623a/"><img src="linkedin.png"></a>
-
-		<a href="https://stackoverflow.com/users/story/8127913"><img src="stack-overflow.png"></a>
-
-	</section>
-
-
+  <footer>
+    <div class="container">
+      Copyright &copy; 2017 Phil Clark
+    </div>
+  </footer>
 </body>
-
-
-<footer>
-	&copy; Copyright 2017 Phil Clark
-</footer>
-
-
 
 </html>
