--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <section class="main-section">
       <h1>About Me</h1>
 
-      <img src="assets/images/cat.jpg" class="auth-image" alt="Your Name">
+      <img src="assets/images/LinkedIn.jpg" class="auth-image" alt="Phil Clark">
 
       <p>Hello world, sup? I'm Phil, and this is my portfolio. If you would like to get to know me a little bit, feel free to continue reading (I won't be offended if you don't). I'm originally from Norfolk, Va. No, my family was not in the Navy - we just happen to call this particular military-based city home. I went to East Carolina University on a baseball scholarship; used to be a pretty average outfielder. I moved to Raleigh after graduation and worked in the insurance industry for 3 years whilst living in the City of Oaks, but I made the executive decision to make a career change into web development. So here we are.</p>
 
