--- a/portfolio.html
+++ b/portfolio.html
@@ -26,27 +26,27 @@
       <h1>Portfolio</h1>
 
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-1.jpg" alt="hangman">
+        <img src="assets/images/champ.png" alt="hangman">
 
         <h3>Hangman</h3>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
+        <img src="assets/images/golf.png" alt="RPG Game">
 
         <h3>RPG Game</h3>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
+        <img src="assets/images/nyc.png" alt="Trivia Game">
 
         <h3>Trivia Game</h3>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
+        <img src="assets/images/paul.png" alt="Rutgers Info Widget">
 
         <h3>Rutgers Info Widget</h3>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
+        <img src="assets/images/yacht.png" alt="Rock Paper Scissors">
 
         <h3>Rock Paper Scissors</h3>
       </div>
@@ -57,9 +57,9 @@
       <div id="connect">
         <h2>Connect with Me</h2>
 
-        <a href="#"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
-        <a href="#"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
-        <a href="#"><img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" /></a>
+        <a href="#"><img src="assets/images/github.png" class="social" alt="GitHub" /></a>
+        <a href="#"><img src="assets/images/linkedin.png" class="social" alt="LinkedIn" /></a>
+        <a href="#"><img src="assets/images/stack-overflow.png" class="social" alt="Stack Overflow" /></a>
       </div>
     </section>
   </div>
